force-app/main/default/objects/Apttus_Config2__BillingPlan__c/Apttus_Config2__BillingPlan__c.object-meta.xml
<CustomObject>
    <description>Represents a billing plan associated with a product or service</description>
    <label>Billing Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>