force-app/main/default/objects/Apttus_Config2__BillingPlan__c/fields/Apttus_Billing__ProductConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ProductConfigurationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated Product Configuration</description>
    <inlineHelpText>ID of the associated Product Configuration</inlineHelpText>
    <label>Product Configuration</label>
    <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
    <relationshipLabel>Billing Plans</relationshipLabel>
    <relationshipName>BillingPlans</relationshipName>
    <type>Lookup</type>
</CustomField>