force-app/main/default/objects/Apttus_Config2__BillingPlan__c/fields/Apttus_Config2__BillingEndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillingEndDate__c</fullName>
    <description>The billing end date</description>
    <inlineHelpText>The billing end date</inlineHelpText>
    <label>Billing End Date</label>
    <type>Date</type>
</CustomField>