force-app/main/default/objects/Apttus_Config2__BillingPlan__c/fields/Apttus_Config2__BillingMethod__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillingMethod__c</fullName>
    <description>The billing method</description>
    <inlineHelpText>The billing method</inlineHelpText>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Split Evenly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>