force-app/main/default/objects/Apttus_Config2__BillingPlan__c/fields/Apttus_Config2__BillingPlanTemplateId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillingPlanTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select a Billing Plan Template to auto fill Billing Plan settings.</description>
    <inlineHelpText>Select a Billing Plan Template to auto fill Billing Plan settings.</inlineHelpText>
    <label>Billing Plan Template</label>
    <referenceTo>Apttus_Config2__BillingPlanTemplate__c</referenceTo>
    <relationshipLabel>Billing Plans</relationshipLabel>
    <relationshipName>BillingPlans</relationshipName>
    <type>Lookup</type>
</CustomField>