force-app/main/default/objects/Apttus_Config2__BillingPlan__c/fields/Apttus_Config2__BillingStartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillingStartDate__c</fullName>
    <description>The billing start date</description>
    <inlineHelpText>The billing start date</inlineHelpText>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>