force-app/main/default/objects/Apttus_Config2__BillingPlan__c/fields/Apttus_Config2__NumOfInstallments__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NumOfInstallments__c</fullName>
    <description>The number of installments</description>
    <inlineHelpText>The number of installments</inlineHelpText>
    <label>Number of Installments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>