force-app/main/default/objects/Apttus_Config2__BillingPlan__c/fields/Apttus_Config2__PlanType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PlanType__c</fullName>
    <description>The billing plan type</description>
    <inlineHelpText>The billing plan type</inlineHelpText>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>